--- a/SAVe_New/backend/Dockerfile
+++ b/SAVe_New/backend/Dockerfile
@@ -4,7 +4,7 @@ FROM golang:1.21-alpine AS builder
 WORKDIR /app
 
 COPY go.mod ./
-# COPY go.sum ./ # Uncomment when go.sum exists
+COPY go.sum ./
 RUN go mod download
 
 COPY . .
