--- a/SAVe_New/frontend/nginx.conf
+++ b/SAVe_New/frontend/nginx.conf
@@ -10,7 +10,10 @@ server {
     }
 
     # Optional: Proxy API requests if not using Docker Compose networking directly in frontend code
-    # location /api/ {
-    #     proxy_pass http://backend:8080;
-    # }
+    # Proxy API requests to the backend container
+    location /api/ {
+        proxy_pass http://backend:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
 }
