--- a/SAVe_New/docker-compose.yml
+++ b/SAVe_New/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     ports:
       - "3000:80"
     environment:
-      - VITE_API_URL=http://localhost:8080
+      - NODE_ENV=production
     depends_on:
       - backend
     networks:
