--- a/SAVe_New/docker-compose.yml
+++ b/SAVe_New/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       - "5432:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
-      - ../tables.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./tables.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - save-network
 
