--- a/SAVe_New/docker-compose.yml
+++ b/SAVe_New/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     build: ./backend
     ports:
       - "8080:8080"
+    restart: always
     environment:
       - DB_HOST=db
       - DB_USER=${DB_USER}
@@ -19,6 +20,7 @@ services:
     build: ./frontend
     ports:
       - "3000:80"
+    restart: always
     environment:
       - NODE_ENV=production
     depends_on:
@@ -34,6 +36,7 @@ services:
       - POSTGRES_DB=${DB_NAME}
     ports:
       - "5432:5432"
+    restart: always
     volumes:
       - db_data:/var/lib/postgresql/data
       - ./tables.sql:/docker-entrypoint-initdb.d/init.sql
