--- a/SAVe_New/docker-compose.yml
+++ b/SAVe_New/docker-compose.yml
@@ -1,9 +1,10 @@
+version: '3.8'
+
 services:
   backend:
-    build: ./backend
+    image: ${DOCKER_USERNAME}/save-backend:latest
     ports:
       - "8080:8080"
-    restart: always
     environment:
       - DB_HOST=db
       - DB_USER=${DB_USER}
@@ -11,18 +12,28 @@ services:
       - DB_NAME=${DB_NAME}
       - DB_PORT=5432
       - JWT_SECRET=${JWT_SECRET}
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: on-failure
+      update_config:
+        parallelism: 1
+        delay: 10s
     depends_on:
       - db
     networks:
       - save-network
 
   frontend:
-    build: ./frontend
+    image: ${DOCKER_USERNAME}/save-frontend:latest
     ports:
       - "3000:80"
-    restart: always
     environment:
       - NODE_ENV=production
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: on-failure
     depends_on:
       - backend
     networks:
@@ -36,7 +47,10 @@ services:
       - POSTGRES_DB=${DB_NAME}
     ports:
       - "5432:5432"
-    restart: always
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: on-failure
     volumes:
       - db_data:/var/lib/postgresql/data
       - ./tables.sql:/docker-entrypoint-initdb.d/init.sql
@@ -49,4 +63,4 @@ volumes:
 
 networks:
   save-network:
-    driver: bridge
+    driver: overlay
