--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,7 @@ name: Build and Push Docker Images
 
 on:
   push:
-    branches: [ "main", "master" ]
+    branches: [ "main", "master", "Limpar-Projeto" ]
   workflow_dispatch:
 
 jobs:
